# easy-cv-dataset

./: .buildinfo  README.md  examples.html  genindex.html  image.html  index.html  install.html  metrics.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  image.doctree  index.doctree  metrics.doctree
.doctrees/api/: image.doctree  index.doctree  metrics.doctree
.github /workflows/: docs
.github/workflows/: sphinx.yml
_modules/: index.html
_modules/easy_cv_dataset/: image_dataset.html
_modules/easy_cv_dataset/metrics/: objdet_metrics.html  (+1 more)
_sources/: examples.rst.txt  metrics.rst.txt
_sources/api/: index.rst.txt
api/: image.html  index.html  metrics.html  visualization.html
docs/: conf.py  examples.rst  index.rst  install.rst
docs/api/: image.rst  visualization.rst
easy_cv_dataset/: __init__.py  image_dataset.py  utils.py
easy_cv_dataset/layers/: __init__.py  central_crop.py  random_affine_transf.py  rescaling.py  to_tuple.py  utils.py
easy_cv_dataset/metrics/: __init__.py  callbacks.py  compute_map_metrics.py  non_max_supression.py  objdet_metrics.py  pycoco_wrapper.py
easy_cv_dataset/visualization/: __init__.py  plot_bounding_box_gallery.py  plot_image_gallery.py  plot_segmentation_mask_gallery.py
examples/classification/: finetuning.ipynb
examples/object_detection/: objdet.ipynb  voc2007_download.sh
examples/segmentation/: semsegm.ipynb  unet.py  unet_hub.py  voc2012_download.sh  voc2012_seg_test.csv  voc2012_seg_train.csv  voc2012_seg_val.csv
(+3 files in other folders)
